--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "npm run production",
         "production": "mix --production"
     },
     "devDependencies": {
@@ -14,6 +12,7 @@
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
+        "bread-compressor-cli": "^1.1.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
